--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 								<article>
 									<header>
 										<span class="date">Power BI</span>
-										<h2><a href="#">Major Tech Companies Stock Prices<br />
+										<h2><a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/pbi.png">Major Tech Companies Stock Prices<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pbi.png" alt="" /></a>
+									<a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/pbi.png" class="image fit"><img src="images/pbi.png" alt="" /></a>
 									<p>Designed an interactive dashboard that compares three of the major players in the tech industry stock prices from 2006 to 2020.</p>
 									
 								</article>
