--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 										<h2><a href="https://github.com/ahmed99abdalla/M3.0-Earthquakes-1995-2015/blob/main/M3.0%2B%20Earthquakes%20in%20the%20Contiguous%20U.S.%2C%201995%20through%202015-1.ipynb">M 3.0+ Earthquakes In USA (1995-2015)<br />
 										
 									</header>
-									<a href="#" class="image fit"><img src="images/eq1.png" alt="" /></a>
+									<a href="https://github.com/ahmed99abdalla/M3.0-Earthquakes-1995-2015/blob/main/M3.0%2B%20Earthquakes%20in%20the%20Contiguous%20U.S.%2C%201995%20through%202015-1.ipynb" class="image fit"><img src="images/eq1.png" alt="" /></a>
 									<p>Earthquakes within the contiguous United States, from 1995 through 2015, that have a magnitude of at least 3.0 as measured by the U.S. Geological Survey.</p>
 									
 								</article>
