--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 										<h2><a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/sql.PNG">M 3.0+ Earthquakes In USA (1995-2015)<br />
 										</a></h2>
 									</header>
-									<a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/sql.PNG" class="image fit"><img src="images/sql.png" alt="" /></a>
+									<a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/sql.PNG" class="image fit"><img src="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/sql.PNG" alt="" /></a>
 									<p>Investigated through SQLite the naturally occurring top earthquakes by filtering and grouping the dataset.</p>
 									
 								</article>
