--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 										<h2><a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/ex.PNG">Covid 19 cases by country<br />
 										</a></h2>
 									</header>
-									<a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/ex.PNG" class="image fit"><img src="images/ex.png" alt="" /></a>
+									<a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/ex.PNG" class="image fit"><img src="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/ex.PNG" alt="" /></a>
 									<p>Using Microsoft Excel pivot table to compare each country with the world's mortality rate average.</p>
 									
 								</article>
@@ -115,7 +115,7 @@
 										<span class="date">Data Modeling</span>
 										<h2><a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/dm.PNG">Electronic Archiving system data model<br />
 									</header>
-									<a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/dm.PNG" class="image fit"><img src="images/dm.png" alt="" /></a>
+									<a href="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/dm.PNG" class="image fit"><img src="https://raw.githubusercontent.com/ahmed99abdalla/AhmedAbdalla.github.io/main/images/dm.PNG" alt="" /></a>
 									<p>Designed the data model for the electronic archiving system for NewTech, this was Hamdouk for information systems first major project.</p>
 									
 								</article>
