--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<h2><a>PROFESSIONAL SUMMARY</a></h2>
 									<p>As a Co-Founder of Hamdouk, information systems outsourcing and consulting business, I played multiple key roles in the growth of the business, leading business development and delivering wide-ranging technical support for our clients. Working hands-on across various projects for clients has given me the utmost confidence in my skills, but most importantly it has helped me find my passion, Working with big data and statistics. .</p>
 								</header>
-								<a  class="image main"><img src="images/aso.png" alt="" style="width:350px;height:400px;" class="picc" /></a>
+								<a  class="image main"><img src="images/aso.png" alt="" class="picc" /></a>
 								<ul class="actions special">
 									<li><a href="https://raw.githubusercontent.com/ahmed99abdalla/RESUME/main/Ahmed%20Abdalla's%20Resume.pdf" class="button large">MY RESUME</a></li>
 								</ul>
